--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ subjects:
 - !lcsh 'United States -- History -- Revolution, 1775-1783 -- Naval operations'
 - !lcsh 'United States -- History -- Revolution, 1775-1783 -- Personal narratives'
 - !lcsh 'Oliver Cromwell (Ship)'
+- GITenberg
 title: 'Log-book of Timothy Boardman
 
   Kept On Board The Privateer Oliver Cromwell, During A
